Fix responsive styles and center images on mobile

--- a/assets/sass/gallery.scss
+++ b/assets/sass/gallery.scss
@@ -41,7 +41,9 @@
       display: grid;
       grid-template-columns: repeat(1, 1fr);
       gap: 0.5rem;
-      background-color: $color-secondary;
+      background-color: aqua;
+      
+      
       padding: 0.5rem;
       margin-bottom: 1rem;
 
